Writing translation onto files
## ADDED
- Route to receive JSON Language Data and write it onto the resource language files

--- a/src/assets/languages/us.json
+++ b/src/assets/languages/us.json
@@ -4,7 +4,7 @@
         "about-us": "About Us",
         "products": "Our Products",
         "projects": "Projects",
-        "work-with-us": "Work with Us",
+        "work-with-us": "Work With Us",
         "contact": "Contact"
     },
     "footer": {
