--- a/src/assets/languages/us.json
+++ b/src/assets/languages/us.json
@@ -1,83 +1,114 @@
 {
-    "header": {
-        "home": "Home",
-        "about-us": "About Us",
-        "products": "Our Products",
-        "projects": "Projects",
-        "work-with-us": "Work With Us",
-        "contact": "Contact"
+    "menu": {
+        "pagina-inicial": "Home",
+        "sobre": "About Us",
+        "produtos": "Our Products",
+        "projetos": "Projects",
+        "trabalhe-conosco": "Work With Us",
+        "contato": "Contact"
     },
-    "footer": {
+    "pagina-inicial": {
+        "sobre": {
+            "titulo-botao": "Explore",
+            "descriçao": "We are proud to be a Brazilian company, which was founded in 1957 by the late José Pinho Marinho de Andrade, in the city of Vitória da Conquista, in the Southwest region of Bahia. We started our activities with the name “Saboaria Conquistense”, producing painted soap, which, with its marbled pattern, resembled a tegu, a reptile characteristic of the sertão. It was from this similarity that the TEIÚ brand was born.",
+            "subtitulo": "A bit of history about who we are",
+            "titulo": "About Us"
+        },
+        "produtos": {
+            "titulo": "Highlights",
+            "subtitulo": "Our Catalogue",
+            "mais-produtos": "All products"
+        },
+        "destaque": {
+            "titulo": "Highlights",
+            "subtitulo": "Out Most Requested Products",
+            "mais-destaques": "All products"
+        },
+        "estatisticas": {
+            "colaboradores": "Active Clients",
+            "anos-mercado": "Employees",
+            "clientes-ativos": "Years on The Market",
+            "produçao": "Tons Produced Yearly"
+        },
+        "filosofia": {
+            "titulo": "We Are",
+            "subtitulo": "Values and Reliability",
+            "descriçao": "Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae. Donec eget ex id justo varius fringilla vel eget arcu.",
+            "valores": {
+                "primeiro-valor": "Best prices in the market",
+                "segundo-valor": "Best prices in the market",
+                "terceiro-valor": "Best prices in the market",
+                "quarto-valor": "Best prices in the market",
+                "quinto-valor": "Best prices in the market"
+            }
+        },
+        "projetos": {
+            "titulo": "Awesome Project",
+            "subtitulo": "To Make Your Life Easier",
+            "mais-projetos": "All projects"
+        }
+    },
+    "sobre": {
+        "titulo": "Our History",
+        "navegacao": {
+            "pagina-inicial": "Home",
+            "sobre": "About Teiú"
+        },
+        "historia": {
+            "titulo": "About Us",
+            "subtitulo": "A bit of history about who we are",
+            "primeiro-paragrafo": "We are proud to be a Brazilian company, which was founded in 1957 by the late José Pinho Marinho de Andrade, in the city of Vitória da Conquista, in the Southwest region of Bahia. We started our activities with the name “Saboaria Conquistense”, producing painted soap, which, with its marbled pattern, resembled a tegu, a reptile characteristic of the sertão. It was from this similarity that the TEIÚ brand was born, initially composed of a line of products that were distributed throughout the region, becoming, years later, a reference throughout the country. We have always prioritized the quality of our products, respect for human and environmental values, principles that were decisive for us to achieve a prominent place in the competitive segment of cleaning and personal hygiene products throughout Brazil. Throughout our history, we have always sought technological advances to offer the market products that facilitate the daily lives of our consumers. For this, we permanently carry out research and technical studies for the development of our lines, which guarantees a standard of quality and superior efficiency.",
+            "segundo-paragrafo": "In addition, we keep up with changing consumer habits and diversify our product line, always incorporating innovation to ensure that each item reaches Brazilian homes with the highest quality standards. Thus, with each product purchased, our consumers take with them not only a quality product, but also the values of a company that cares about the well-being of society. Our manufacturing unit occupies an area of more than 30 thousand square meters in the Industrial District of Imborés, in Vitória da Conquista, Bahia. Equipped with high technology, ensuring greater performance in industrial processes, it achieves the performance of more than 100 thousand tons of products per year, which reach the points of sale through a fully computerized distribution center, which streamlines our logistics operation.",
+            "terceiro-paragrafo": "At each production stage, trained employees contribute to ensuring total quality control and compliance with the strictest standards. On completing 60 YEARS, we reaffirm our values and commitments to consumers, customers, employees and strategic partners. We are a 21st century company, with our own logistics and great prominence on the national scene, exporting our products to the most diverse markets in Brazil."
+        },
+        "fundador": {
+            "titulo": "José Andrade",
+            "subtitulo": "Getting to Know our Founder",
+            "primeiro-paragrafo": "We are proud to be a Brazilian company, which was founded in 1957 by the late José Pinho Marinho de Andrade, in the city of Vitória da Conquista, in the Southwest region of Bahia. We started our activities with the name “Saboaria Conquistense”, producing painted soap, which, with its marbled pattern, resembled a tegu, a reptile characteristic of the sertão. It was from this similarity that the TEIÚ brand was born, initially composed of a line of products that were distributed throughout the region, becoming, years later, a reference throughout the country. We have always prioritized the quality of our products, respect for human and environmental values, principles that were decisive for us to achieve a prominent place in the competitive segment of cleaning and personal hygiene products throughout Brazil.",
+            "segundo-paragrafo": "In 1952, he graduated in Industrial Chemistry in Curitiba, then worked at Companhia Brasileira de Alumínio, part of the Votorantim Group. In 1954, he moved to Bahia to work in mining in the municipality of Boquira. Entrepreneur and visionary, he identified a great opportunity to invest in Vitória da Conquista, founding Saboaria Conquistense, which, years later, was renamed TEIÚ. Throughout our history, we have always sought technological advances to offer the market products that facilitate the daily lives of our consumers. For this, we permanently carry out research and technical studies for the development of our lines, which guarantees a standard of quality and superior efficiency.",
+            "terceiro-paragrafo": "Above all, “Doctor Marinho” was a man of faith. In his memoir, he writes: “I thank God for allowing me to walk with dignity and a lot of courage to face the struggles, which were not few, but were insignificant in the face of the blessings received”.",
+            "quarto-paragrafo": "The “Doctor Marinho” left us values and teachings that are fundamental pillars of TEIÚ's success."
+        },
+        "galeria": {
+            "titulo": "A Peek Where",
+            "subtitulo": "It All Happens"
+        }
+    },
+    "produtos": {
+        "titulo": "Our Products",
+        "subtitulo": "We Present You",
+        "navegacao": {
+            "pagina-inicial": "Home",
+            "produtos": "Our Products"
+        },
+        "buscar": "Find products",
+        "limpar-filtros": "Clear Filters",
+        "filtros": "Filters",
+        "campo-busca": "Teiú Dishwasher...",
+        "filtro-categorias": "Find by Categories",
+        "filtro-ambientes": "Find by Environments",
+        "filtro-marcas": "Find by Brands"
+    },
+    "projetos": {
+        "titulo": "Awesome Project",
+        "subtitulo": "To Make Your Life Easier"
+    },
+    "rodape": {
         "slogan": "Makes your life easier",
-        "follow": "Social Media",
-        "rights": "All Rights Reserved | 2024",
-        "company": {
-            "title": "Company",
-            "home": "Home",
-            "about": "About Us",
-            "products": "Products",
-            "contact": "Contact"
+        "redes-sociais": "Social Media",
+        "direitos": "All Rights Reserved | 2024",
+        "empresa": {
+            "titulo": "Company",
+            "pagina-inicial": "Home",
+            "sobre": "About Us",
+            "produtos": "Products",
+            "contato": "Contact"
         },
         "info": {
-            "title": "Information",
-            "prices": "Prices",
-            "sales": "Sales Reps",
-            "services": "Our Services"
-        }
-    },
-    "home": {
-        "about": {
-            "button-label": "Explore",
-            "description": "We are proud to be a Brazilian company, which was founded in 1957 by the late José Pinho Marinho de Andrade, in the city of Vitória da Conquista, in the Southwest region of Bahia. We started our activities with the name “Saboaria Conquistense”, producing painted soap, which, with its marbled pattern, resembled a tegu, a reptile characteristic of the sertão. It was from this similarity that the TEIÚ brand was born.",
-            "subtitle": "A bit of history about who we are",
-            "title": "About Us"
-        },
-        "products": {
-            "title": "Highlights",
-            "subtitle": "Our Catalogue",
-            "more": "All products"
-        },
-        "featured": {
-            "title": "Highlights",
-            "subtitle": "Out Most Requested Products",
-            "more": "All products"
-        },
-        "stats": {
-            "active-clients": "Active Clients",
-            "employees": "Employees",
-            "years": "Years on The Market",
-            "products": "Tons Produced Yearly"
-        },
-        "philosophy": {
-            "title": "We Are",
-            "subtitle": "Values and Reliability",
-            "description": "Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae. Donec eget ex id justo varius fringilla vel eget arcu."
-        },
-        "projects": {
-            "title": "Awesome Project",
-            "subtitle": "To Make Your Life Easier",
-            "more": "All projects"
-        }
-    },
-    "about": {
-        "history": {
-            "title": "About Us",
-            "subtitle": "A bit of history about who we are",
-            "first-paragraph": "We are proud to be a Brazilian company, which was founded in 1957 by the late José Pinho Marinho de Andrade, in the city of Vitória da Conquista, in the Southwest region of Bahia. We started our activities with the name “Saboaria Conquistense”, producing painted soap, which, with its marbled pattern, resembled a tegu, a reptile characteristic of the sertão. It was from this similarity that the TEIÚ brand was born, initially composed of a line of products that were distributed throughout the region, becoming, years later, a reference throughout the country. We have always prioritized the quality of our products, respect for human and environmental values, principles that were decisive for us to achieve a prominent place in the competitive segment of cleaning and personal hygiene products throughout Brazil. Throughout our history, we have always sought technological advances to offer the market products that facilitate the daily lives of our consumers. For this, we permanently carry out research and technical studies for the development of our lines, which guarantees a standard of quality and superior efficiency.",
-            "second-paragraph": "In addition, we keep up with changing consumer habits and diversify our product line, always incorporating innovation to ensure that each item reaches Brazilian homes with the highest quality standards. Thus, with each product purchased, our consumers take with them not only a quality product, but also the values of a company that cares about the well-being of society. Our manufacturing unit occupies an area of more than 30 thousand square meters in the Industrial District of Imborés, in Vitória da Conquista, Bahia. Equipped with high technology, ensuring greater performance in industrial processes, it achieves the performance of more than 100 thousand tons of products per year, which reach the points of sale through a fully computerized distribution center, which streamlines our logistics operation.",
-            "third-paragraph": "At each production stage, trained employees contribute to ensuring total quality control and compliance with the strictest standards. On completing 60 YEARS, we reaffirm our values and commitments to consumers, customers, employees and strategic partners. We are a 21st century company, with our own logistics and great prominence on the national scene, exporting our products to the most diverse markets in Brazil."
-        },
-        "founder": {
-            "title": "José Andrade",
-            "subtitle": "Getting to Know our Founder",
-            "first-paragraph": "We are proud to be a Brazilian company, which was founded in 1957 by the late José Pinho Marinho de Andrade, in the city of Vitória da Conquista, in the Southwest region of Bahia. We started our activities with the name “Saboaria Conquistense”, producing painted soap, which, with its marbled pattern, resembled a tegu, a reptile characteristic of the sertão. It was from this similarity that the TEIÚ brand was born, initially composed of a line of products that were distributed throughout the region, becoming, years later, a reference throughout the country. We have always prioritized the quality of our products, respect for human and environmental values, principles that were decisive for us to achieve a prominent place in the competitive segment of cleaning and personal hygiene products throughout Brazil.",
-            "second-paragraph": "In 1952, he graduated in Industrial Chemistry in Curitiba, then worked at Companhia Brasileira de Alumínio, part of the Votorantim Group. In 1954, he moved to Bahia to work in mining in the municipality of Boquira. Entrepreneur and visionary, he identified a great opportunity to invest in Vitória da Conquista, founding Saboaria Conquistense, which, years later, was renamed TEIÚ. Throughout our history, we have always sought technological advances to offer the market products that facilitate the daily lives of our consumers. For this, we permanently carry out research and technical studies for the development of our lines, which guarantees a standard of quality and superior efficiency.",
-            "third-paragraph": "Above all, “Doctor Marinho” was a man of faith. In his memoir, he writes: “I thank God for allowing me to walk with dignity and a lot of courage to face the struggles, which were not few, but were insignificant in the face of the blessings received”.",
-            "fourth-paragraph": "The “Doctor Marinho” left us values and teachings that are fundamental pillars of TEIÚ's success."
-        },
-        "gallery": {
-            "title": "A Peek Where",
-            "subtitle": "It All Happens"
+            "titulo": "Information",
+            "cotacoes": "Prices",
+            "representantes": "Sales Reps",
+            "serviços": "Our Services"
         }
     }
 }
