Fixing Static Language Service

--- a/src/assets/languages/br.json
+++ b/src/assets/languages/br.json
@@ -1,136 +1,1 @@
-{
-    "menu": {
-        "parceiros": {
-            "titulo": "Nossos Parceiros",
-            "subtitulo": "Principais Parcerias",
-            "b2b": "B2B",
-            "catalogo": "Catálogo",
-            "logistica": "Logística",
-            "mapa": "Mapa do Estado"
-        },
-        "pagina-inicial": "Página Inicial",
-        "sobre": "A Teiú",
-        "produtos": "Produtos",
-        "projetos": "Projetos",
-        "trabalhe-conosco": "Trabalhe Conosco",
-        "contato": "Contato"
-    },
-    "pagina-inicial": {
-        "destaque": {
-            "titulo": "Destaque",
-            "subtitulo": "Nossos Destaques para Você",
-            "mais-destaques": "Ver todos os produtos"
-        },
-        "sobre": {
-            "titulo-botao": "Explore",
-            "descriçao": "Temos orgulho de ser uma empresa brasileira, que foi fundada no ano de 1957, pelo saudoso José Pinho Marinho de Andrade, na cidade de Vitória da Conquista, região Sudoeste da Bahia. Iniciamos nossas atividades com o nome “Saboaria Conquistense”, produzindo o sabão pintado, que, com seu padrão marmorizado, assemelhava-se a um teiú, um réptil característico do sertão. Foi desta semelhança que nasceu a marca TEIÚ.",
-            "subtitulo": "Um pouco sobre nossa história",
-            "titulo": "Sobre a Teiú"
-        },
-        "produtos": {
-            "titulo": "Destaque",
-            "subtitulo": "Nossos Produtos",
-            "mais-produtos": "Ver todos os produtos"
-        },
-        "estatisticas": {
-            "colaboradores": "Colaboradores",
-            "anos-mercado": "Anos no Mercado",
-            "clientes-ativos": "Clientes Ativos",
-            "produçao": "Toneladas Produzidas Anualmente"
-        },
-        "filosofia": {
-            "titulo": "Somos",
-            "subtitulo": "Valores e Qualidade",
-            "descriçao": "Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae. Donec eget ex id justo varius fringilla vel eget arcu.",
-            "valores": {
-                "primeiro-valor": "Os melhores preços do mercado",
-                "segundo-valor": "Os melhores preços do mercado",
-                "terceiro-valor": "Os melhores preços do mercado",
-                "quarto-valor": "Os melhores preços do mercado",
-                "quinto-valor": "Os melhores preços do mercado"
-            }
-        },
-        "projetos": {
-            "titulo": "Nossos Projetos",
-            "subtitulo": "Teiú por Todo Lugar",
-            "mais-projetos": "Ver todos os projetos"
-        }
-    },
-    "sobre": {
-        "titulo": "Sobre Nossa História",
-        "navegacao": {
-            "pagina-inicial": "Página Inicial",
-            "sobre": "Sobre a Teiú"
-        },
-        "historia": {
-            "titulo": "Sobre a Teiú",
-            "subtitulo": "Um Pouco Sobre Nossa História",
-            "primeiro-paragrafo": "Temos orgulho de ser uma empresa brasileira, que foi fundada no ano de 1957, pelo saudoso José Pinho Marinho de Andrade, na cidade de Vitória da Conquista, região Sudoeste da Bahia. Iniciamos nossas atividades com o nome “Saboaria Conquistense”, produzindo o sabão pintado, que, com seu padrão marmorizado, assemelhava-se a um teiú, um réptil característico do sertão. Foi desta semelhança que nasceu a marca TEIÚ, composta inicialmente por uma linha de produtos que eram distribuídos em toda a região, tornando-se, anos depois, uma referência em todo o país. Sempre priorizamos a qualidade dos nossos produtos, o respeito aos valores humanos e ambientais, princípios esses que foram determinantes para alcançarmos um lugar de destaque no concorrido segmento de produtos de limpeza e higiene pessoal em todo o Brasil. Ao longo da nossa história, sempre buscamos os avanços tecnológicos para oferecer ao mercado produtos que facilitem o dia a dia dos nossos consumidores. Para isso, realizamos de forma permanente, pesquisas e estudos técnicos para o desenvolvimento das nossas linhas, o que garante um padrão de qualidade e eficiência superior.",
-            "segundo-paragrafo": "Além disso, acompanhamos a mudança dos hábitos dos consumidores e diversificamos a nossa linha de produtos, sempre incorporando inovação para garantir que cada item chegue aos lares dos brasileiros com o mais alto padrão de qualidade. Assim, a cada produto adquirido, nossos consumidores levam consigo não somente um produto de qualidade, mas também os valores de uma empresa que se preocupa com o bem-estar da sociedade. A nossa unidade fabril ocupa uma área de mais de 30 mil metros quadrados no Distrito Industrial dos Imborés, em Vitória da Conquista, Bahia. Equipada com alta tecnologia, garantindo maior desempenho nos processos industriais, alcança a performance de mais de 100 mil toneladas de produtos por ano, que chegam aos pontos de vendas através de um centro de distribuição totalmente informatizado, que agiliza a nossa operação logística.",
-            "terceiro-paragrafo": "Em cada etapa produtiva, colaboradores capacitados contribuem para garantir o total controle de qualidade e respeito às mais rigorosas normas. Ao completar 60 ANOS, reafirmamos os nossos valores e compromissos com os consumidores, clientes, colaboradores e parceiros estratégicos. Somos uma empresa do século XXI, com logística própria e grande destaque no cenário nacional, exportando nossos produtos para os mais diversos mercados do Brasil."
-        },
-        "fundador": {
-            "titulo": "José Andrade",
-            "subtitulo": "Um Pouco Sobre Nosso Fundador",
-            "primeiro-paragrafo": "Temos orgulho de ser uma empresa brasileira, que foi fundada no ano de 1957, pelo saudoso José Pinho Marinho de Andrade, na cidade de Vitória da Conquista, região Sudoeste da Bahia. Iniciamos nossas atividades com o nome “Saboaria Conquistense”, produzindo o sabão pintado, que, com seu padrão marmorizado, assemelhava-se a um teiú, um réptil característico do sertão. Foi desta semelhança que nasceu a marca TEIÚ, composta inicialmente por uma linha de produtos que eram distribuídos em toda a região, tornando-se, anos depois, uma referência em todo o país. Sempre priorizamos a qualidade dos nossos produtos, o respeito aos valores humanos e ambientais, princípios esses que foram determinantes para alcançarmos um lugar de destaque no concorrido segmento de produtos de limpeza e higiene pessoal em todo o Brasil.",
-            "segundo-paragrafo": "Em 1952, formou-se em Química Industrial, em Curitiba, depois trabalhou na Companhia Brasileira de Alumínio, do Grupo Votorantim. Em 1954, mudou-se para a Bahia para trabalhar na mineração do município de Boquira. Empreendedor e visionário, identificou em Vitória da Conquista uma grande oportunidade para investir, fundando a Saboaria Conquistense que, anos depois, passou a ser denominada TEIÚ. Ao longo da nossa história, sempre buscamos os avanços tecnológicos para oferecer ao mercado produtos que facilitem o dia a dia dos nossos consumidores. Para isso, realizamos de forma permanente, pesquisas e estudos técnicos para o desenvolvimento das nossas linhas, o que garante um padrão de qualidade e eficiência superior.",
-            "terceiro-paragrafo": "Antes de tudo, “Doutô Marinho” era um homem de fé. Em seu livro de memórias, escreve:“Agradeço a Deus, por Ele ter me permitido caminhar com dignidade e muita coragem para enfrentar as lutas, que não foram poucas, mas que foram insignificantes diante das bênçãos recebidas”.",
-            "quarto-paragrafo": "O “Doutô Marinho” nos deixou valores e ensinamentos que são pilares fundamentais do sucesso da TEIÚ."
-        },
-        "detalhes": {
-            "estrutura": {
-                "titulo": "Estrutura",
-                "descriçao": "Investimentos em pesquisa, desenvolvimento e em equipamentos de alta tecnologia garantem a qualidade superior dos nossos produtos."
-            },
-            "distribuiçao": {
-                "titulo": "Distribuição",
-                "descriçao": "Nosso centro de distribuição é um dos maiores e mais modernos do Brasil. Com um sistema de distribuição totalmente informatizado, conseguimos o máximo em eficiência e agilidade nas nossas entregas. Os produtos TEIÚ chegam aos pontos de vendas através de uma frota própria, composta por 50 caminhões, que são conduzidos por motoristas experientes e treinados."
-            },
-            "linha-do-tempo": {
-                "titulo": "Linha do Tempo",
-                "descriçao": "Desde 1957 fazendo parte da sua vida!"
-            }
-        },
-        "galeria": {
-            "titulo": "Um pouco da",
-            "subtitulo": "Nossa Galeria"
-        }
-    },
-    "produtos": {
-        "titulo": "Nossos Produtos",
-        "subtitulo": "Todos os",
-        "navegacao": {
-            "pagina-inicial": "Página Inicial",
-            "produtos": "Produtos"
-        },
-        "buscar": "Buscar produtos",
-        "limpar-filtros": "Limpar Filtros",
-        "filtros": "Filtros",
-        "campo-busca": "Detergente Teiú...",
-        "filtro-categorias": "Filtrar por Categorias",
-        "filtro-ambientes": "Filtrar por Ambientes",
-        "filtro-marcas": "Filtrar por Marcas"
-    },
-    "projetos": {
-        "titulo": "Nossos Projetos",
-        "subtitulo": "Teiú por Todo Lugar"
-    },
-    "rodape": {
-        "slogan": "Facilita sua vida.",
-        "redes-sociais": "Redes Sociais",
-        "direitos": "Todos os direitos reservados | 2024",
-        "empresa": {
-            "titulo": "Empresa",
-            "pagina-inicial": "Página Inicial",
-            "sobre": "Sobre Nós",
-            "produtos": "Nossos Produtos",
-            "contato": "Contato"
-        },
-        "info": {
-            "titulo": "Informações",
-            "cotacoes": "Cotações",
-            "representantes": "Representantes",
-            "serviços": "Nossos Serviços"
-        }
-    }
-}
+{"menu":{"parceiros":{"titulo":"Nossos Parceiros","subtitulo":"Principais Parcerias","b2b":"B2B","catalogo":"Catálogo","logistica":"Logística","mapa":"Mapa do Estado"},"pagina-inicial":"Página Inicial","sobre":"A Teiú","produtos":"Produtos","projetos":"Projetos","trabalhe-conosco":"Trabalhe Conosco","contato":"Contato"},"pagina-inicial":{"destaque":{"titulo":"Destaque","subtitulo":"Nossos Destaques para Você","mais-destaques":"Ver todos os produtos"},"sobre":{"titulo-botao":"Explore","descriçao":"Temos orgulho de ser uma empresa brasileira, que foi fundada no ano de 1957, pelo saudoso José Pinho Marinho de Andrade, na cidade de Vitória da Conquista, região Sudoeste da Bahia. Iniciamos nossas atividades com o nome “Saboaria Conquistense”, produzindo o sabão pintado, que, com seu padrão marmorizado, assemelhava-se a um teiú, um réptil característico do sertão. Foi desta semelhança que nasceu a marca TEIÚ.","subtitulo":"Um pouco sobre nossa história","titulo":"Sobre a Teiú"},"produtos":{"titulo":"Destaque","subtitulo":"Nossos Produtos","mais-produtos":"Ver todos os produtos"},"estatisticas":{"colaboradores":"Colaboradores","anos-mercado":"Anos no Mercado","clientes-ativos":"Clientes Ativos","produçao":"Toneladas Produzidas Anualmente"},"filosofia":{"titulo":"Somos","subtitulo":"Valores e Qualidade","descriçao":"Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae. Donec eget ex id justo varius fringilla vel eget arcu.","valores":{"primeiro-valor":"Os melhores preços do mercado","segundo-valor":"Os melhores preços do mercado","terceiro-valor":"Os melhores preços do mercado","quarto-valor":"Os melhores preços do mercado","quinto-valor":"Os melhores preços do mercado"}},"projetos":{"titulo":"Nossos Projetos","subtitulo":"Teiú por Todo Lugar","mais-projetos":"Ver todos os projetos"}},"sobre":{"titulo":"Sobre Nossa História","navegacao":{"pagina-inicial":"Página Inicial","sobre":"Sobre a Teiú"},"historia":{"titulo":"Sobre a Teiú","subtitulo":"Um Pouco Sobre Nossa História","primeiro-paragrafo":"Temos orgulho de ser uma empresa brasileira, que foi fundada no ano de 1957, pelo saudoso José Pinho Marinho de Andrade, na cidade de Vitória da Conquista, região Sudoeste da Bahia. Iniciamos nossas atividades com o nome “Saboaria Conquistense”, produzindo o sabão pintado, que, com seu padrão marmorizado, assemelhava-se a um teiú, um réptil característico do sertão. Foi desta semelhança que nasceu a marca TEIÚ, composta inicialmente por uma linha de produtos que eram distribuídos em toda a região, tornando-se, anos depois, uma referência em todo o país. Sempre priorizamos a qualidade dos nossos produtos, o respeito aos valores humanos e ambientais, princípios esses que foram determinantes para alcançarmos um lugar de destaque no concorrido segmento de produtos de limpeza e higiene pessoal em todo o Brasil. Ao longo da nossa história, sempre buscamos os avanços tecnológicos para oferecer ao mercado produtos que facilitem o dia a dia dos nossos consumidores. Para isso, realizamos de forma permanente, pesquisas e estudos técnicos para o desenvolvimento das nossas linhas, o que garante um padrão de qualidade e eficiência superior.","segundo-paragrafo":"Além disso, acompanhamos a mudança dos hábitos dos consumidores e diversificamos a nossa linha de produtos, sempre incorporando inovação para garantir que cada item chegue aos lares dos brasileiros com o mais alto padrão de qualidade. Assim, a cada produto adquirido, nossos consumidores levam consigo não somente um produto de qualidade, mas também os valores de uma empresa que se preocupa com o bem-estar da sociedade. A nossa unidade fabril ocupa uma área de mais de 30 mil metros quadrados no Distrito Industrial dos Imborés, em Vitória da Conquista, Bahia. Equipada com alta tecnologia, garantindo maior desempenho nos processos industriais, alcança a performance de mais de 100 mil toneladas de produtos por ano, que chegam aos pontos de vendas através de um centro de distribuição totalmente informatizado, que agiliza a nossa operação logística.","terceiro-paragrafo":"Em cada etapa produtiva, colaboradores capacitados contribuem para garantir o total controle de qualidade e respeito às mais rigorosas normas. Ao completar 60 ANOS, reafirmamos os nossos valores e compromissos com os consumidores, clientes, colaboradores e parceiros estratégicos. Somos uma empresa do século XXI, com logística própria e grande destaque no cenário nacional, exportando nossos produtos para os mais diversos mercados do Brasil."},"fundador":{"titulo":"José Andrade","subtitulo":"Um Pouco Sobre Nosso Fundador","primeiro-paragrafo":"Temos orgulho de ser uma empresa brasileira, que foi fundada no ano de 1957, pelo saudoso José Pinho Marinho de Andrade, na cidade de Vitória da Conquista, região Sudoeste da Bahia. Iniciamos nossas atividades com o nome “Saboaria Conquistense”, produzindo o sabão pintado, que, com seu padrão marmorizado, assemelhava-se a um teiú, um réptil característico do sertão. Foi desta semelhança que nasceu a marca TEIÚ, composta inicialmente por uma linha de produtos que eram distribuídos em toda a região, tornando-se, anos depois, uma referência em todo o país. Sempre priorizamos a qualidade dos nossos produtos, o respeito aos valores humanos e ambientais, princípios esses que foram determinantes para alcançarmos um lugar de destaque no concorrido segmento de produtos de limpeza e higiene pessoal em todo o Brasil.","segundo-paragrafo":"Em 1952, formou-se em Química Industrial, em Curitiba, depois trabalhou na Companhia Brasileira de Alumínio, do Grupo Votorantim. Em 1954, mudou-se para a Bahia para trabalhar na mineração do município de Boquira. Empreendedor e visionário, identificou em Vitória da Conquista uma grande oportunidade para investir, fundando a Saboaria Conquistense que, anos depois, passou a ser denominada TEIÚ. Ao longo da nossa história, sempre buscamos os avanços tecnológicos para oferecer ao mercado produtos que facilitem o dia a dia dos nossos consumidores. Para isso, realizamos de forma permanente, pesquisas e estudos técnicos para o desenvolvimento das nossas linhas, o que garante um padrão de qualidade e eficiência superior.","terceiro-paragrafo":"Antes de tudo, “Doutô Marinho” era um homem de fé. Em seu livro de memórias, escreve:“Agradeço a Deus, por Ele ter me permitido caminhar com dignidade e muita coragem para enfrentar as lutas, que não foram poucas, mas que foram insignificantes diante das bênçãos recebidas”.","quarto-paragrafo":"O “Doutô Marinho” nos deixou valores e ensinamentos que são pilares fundamentais do sucesso da TEIÚ."},"detalhes":{"estrutura":{"titulo":"Estrutura","descriçao":"Investimentos em pesquisa, desenvolvimento e em equipamentos de alta tecnologia garantem a qualidade superior dos nossos produtos."},"distribuiçao":{"titulo":"Distribuição","descriçao":"Nosso centro de distribuição é um dos maiores e mais modernos do Brasil. Com um sistema de distribuição totalmente informatizado, conseguimos o máximo em eficiência e agilidade nas nossas entregas. Os produtos TEIÚ chegam aos pontos de vendas através de uma frota própria, composta por 50 caminhões, que são conduzidos por motoristas experientes e treinados."},"linha-do-tempo":{"titulo":"Linha do Tempo","descriçao":"Desde 1957 fazendo parte da sua vida!"}},"galeria":{"titulo":"Um pouco da","subtitulo":"Nossa Galeria"}},"produtos":{"titulo":"Nossos Produtos","subtitulo":"Todos os","navegacao":{"pagina-inicial":"Página Inicial","produtos":"Produtos"},"buscar":"Buscar produtos","limpar-filtros":"Limpar Filtros","filtros":"Filtros","campo-busca":"Detergente Teiú...","filtro-categorias":"Filtrar por Categorias","filtro-ambientes":"Filtrar por Ambientes","filtro-marcas":"Filtrar por Marcas"},"projetos":{"titulo":"Nossos Projetos","subtitulo":"Teiú por Todo Lugar"},"rodape":{"slogan":"Facilita sua vida.","redes-sociais":"Redes Sociais","direitos":"Todos os direitos reservados | 2024","empresa":{"titulo":"Empresa","pagina-inicial":"Página Inicial","sobre":"Sobre Nós","produtos":"Nossos Produtos","contato":"Contato"},"info":{"titulo":"Informações","cotacoes":"Cotações","representantes":"Representantes","serviços":"Nossos Serviços"}}}
